# goit-algo-hw-08

./: README.md  pyproject.toml
task_01/: task_01.py
task_01/tests/: test_task_01.py
task_02/: task_02.py
task_02/tests/: test_task_02.py
task_03/: task_03.py
task_03/tests/: test_task_03.py
task_03_b/: task_03_b.py
task_03_b/resources/: file_00.txt  file_01.txt  file_02.txt  file_03.txt  file_04.txt  file_05.txt  file_06.txt  file_07.txt  file_08.txt  file_09.txt  file_10.txt  file_11.txt  file_12.txt  file_13.txt  file_14.txt  file_15.txt  file_16.txt  file_17.txt  file_18.txt  file_19.txt
task_03_b/tests/: test_task_03_b.py
tree/: __init__.py  avl_tree.py
tree/tests/: test_avl_tree.py
